@@ -1,0 +1,1 @@
+debian/tmp/usr/share/gtk-doc/html/libappindicate/*
